--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,13 +1,33 @@
-version: '3.7'
+version: '3.8'
 services:
   neo4j:
     image: neo4j
     container_name: "Neo4j_Database"
     ports:
-    - "7474:7474"
-    - "7687:7687"
+      - "7474:7474"
+      - "7687:7687"
+    volumes:
+      - ./.db-data:/data
     environment:
-    - NEO4J_ACCEPT_LICENSE_AGREEMENT=yes 
-    - NEO4J_AUTH=neo4j/test_password
-    - NEO4JLABS_PLUGINS=["apoc", "graph-data-science"]
-    - apoc.import.file.enabled=truea
+      - NEO4J_ACCEPT_LICENSE_AGREEMENT=yes 
+      - NEO4J_AUTH=neo4j/test_password
+      - NEO4JLABS_PLUGINS=["apoc", "graph-data-science"]
+      - apoc.import.file.enabled=truea
+    healthcheck:
+      test: [ "CMD", "/var/lib/neo4j/bin/cypher-shell", "-u", "neo4j", "-p", "test_password", "MATCH () RETURN count(*) as count" ]
+      interval: 10s
+      timeout: 5s
+      retries: 10
+      start_period: 25s
+    
+  actor:
+    image: rp/modification
+    depends_on:
+      neo4j:
+        condition: service_healthy
+    volumes:
+      - ./try1/logs:/log/
+    environment:
+      - DB_URL=neo4j://neo4j:7687
+      - DB_USER=neo4j
+      - DB_PASSWORD=test_password
