--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -27,6 +27,7 @@ services:
         condition: service_healthy
     volumes:
       - ./logs:/log/rp/
+      - ./logs:/app/logs/
     environment:
       - DB_URL=neo4j://neo4j:7687
       - DB_USER=neo4j
